--- a/WebServer/CMakeLists.txt
+++ b/WebServer/CMakeLists.txt
@@ -1,3 +1,20 @@
+# ------------------------------------------------------------------------------
+#
+# Copyright 2016 The Charon Platform Authors.
+#
+# All rights reserved.
+# Use of this source code is governed by a BSD-style
+# license that can be found in the LICENSE file.
+#
+# ------------------------------------------------------------------------------
+
+include_directories(.)
+include_directories(${PROJECT_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/deps/include)
+include_directories(${PROJECT_SOURCE_DIR}/src/lua/json)
+
+link_directories( ${PROJECT_SOURCE_DIR}/deps )
+
 set(SRCS
     Channel.cpp
     Epoll.cpp
@@ -15,16 +32,10 @@ set(SRCS
 find_package(Qt5Core)
 find_package(Qt5Network)
 
-
-include_directories(${PROJECT_SOURCE_DIR}/base)
-include_directories(/home/ariveira/projetos/charon/include)
-include_directories(/home/ariveira/projetos/charon/deps/include)
-
-link_directories( "/home/ariveira/projetos/charon/deps" )
-
-set(EXECUTABLE_OUTPUT_PATH /home/ariveira/projetos/charon/bin)
+#set(EXECUTABLE_OUTPUT_PATH /home/ariveira/projetos/charon/bin)
 
 add_executable(titan ${SRCS})
+
 target_link_libraries(titan libserver_base charon lua)
 target_link_libraries(titan Qt5::Core)
 target_link_libraries(titan Qt5::Network)
