--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # ------------------------------------------------------------------------------
 #
-# Copyright 2016 The Charon Platform Authors.
+# Copyright 2016 The Arken Platform Authors.
 #
 # All rights reserved.
 # Use of this source code is governed by a BSD-style
@@ -31,12 +31,15 @@ set(SRCS
 
 find_package(Qt5Core)
 find_package(Qt5Network)
+find_package(Qt5Gui)
+find_package(Qt5Widgets)
 
-#set(EXECUTABLE_OUTPUT_PATH /home/ariveira/projetos/charon/bin)
+
+#set(EXECUTABLE_OUTPUT_PATH /home/ariveira/projetos/arken/bin)
 
 add_executable(titan ${SRCS})
 
-target_link_libraries(titan libserver_base charon lua)
+target_link_libraries(titan libserver_base arken lua)
 target_link_libraries(titan Qt5::Core)
 target_link_libraries(titan Qt5::Network)
 
