--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -4,6 +4,8 @@ set(LIB_SRC
     Thread.cpp
 )
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC ")
+
 add_library(libserver_base ${LIB_SRC})
 target_link_libraries(libserver_base pthread rt)
 
